<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1BEE7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_heading"
        android:textColor="#AA00FF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".06" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:text="@string/register_text"
        android:onClick="openRegisterActivity"
        app:layout_constraintBottom_toTopOf="@+id/favourites_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <Button
        android:id="@+id/display_button"
        android:onClick="openDisplayActivity"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:text="@string/display_text"
        app:layout_constraintBottom_toTopOf="@+id/edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/favourites_button"
        android:onClick="openFavouriteActivity"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:text="@string/favourites_text"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.80" />

    <Button
        android:id="@+id/edit_button"
        android:onClick="openEditActivity"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:text="@string/edit_text"
        app:layout_constraintBottom_toTopOf="@+id/ratings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favourites_button"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.80" />

    <Button
        android:id="@+id/search_button"
        android:onClick="openSearchActivity"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:text="@string/search_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/ratings_button"
        android:onClick="openRatingsActivity"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:text="@string/ratings_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_button"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>